<?xml version="1.0"?>
<package format="3">
  <name>kratos_ankit</name>
  <version>0.0.0</version>
  <description>Python nodes for Kratos Ankit project</description>
  <maintainer email="ankit@example.com">Ankit</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>kratos_ankit_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
